@startuml Timebox1_Class
hide circle
skinparam classAttributeIconSize 0
title Timebox 1 - Student Registration and Course Registration

note right of User
  **Implementation note:**
  Methods shown are conceptual design-level operations.
  Actual implementation uses Laravel Eloquent ORM,
  Controllers (e.g. RegisteredUserController, SettingsController),
  and Laravel Auth for Login/Logout/Password.
end note

class User {
  +id: bigint
  +name: varchar
  +email: varchar
  +role: varchar
  +photo: varchar
  +preferences: longtext
  +email_verified_at: timestamp
  +password: varchar
  +remember_token: varchar
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +Login()
  +Logout()
  +Register()
  +UpdateProfile()
  +ResetPassword()
  +VerifyEmail()
  +GetRole()
  +AutoID()
}

class Student {
  +id: bigint
  +user_id: bigint
  +student_no: varchar
  +dob: date
  +gender: varchar
  +nationality: varchar
  +phone: varchar
  +address: text
  +emergency_contact_name: varchar
  +emergency_contact_phone: varchar
  +programme: varchar
  +intake_year: varchar
  +previous_institution: varchar
  +previous_qualification: varchar
  +status: varchar
  +notes: text
  +enrollment_date: date
  +photo: varchar
  +id_card: varchar
  +transcript: varchar
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +AddStudent()
  +UpdateStudent()
  +DeleteStudent()
  +SearchStudent()
  +GetEnrollments()
  +AutoID()
}

note right of Student
  Identity fields (name/email) are derived via User.
end note

class Course {
  +id: bigint
  +course_code: varchar
  +title: varchar
  +credits: int
  +semester: varchar
  +attendance_threshold: decimal(5,2)
  +photo: varchar
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +AddCourse()
  +UpdateCourse()
  +DeleteCourse()
  +SearchCourse()
  +GetSubjects()
  +GetEnrollments()
  +ValidateCourseCode()
  +AutoID()
}

class Subject {
  +id: bigint
  +course_id: bigint
  +subject_code: varchar
  +title: varchar
  +credits: int
  +description: text
  +photo: varchar
  +attendance_threshold: decimal(5,2)
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +AddSubject()
  +UpdateSubject()
  +DeleteSubject()
  +SearchSubject()
  +ValidateSubjectCode()
  +AutoID()
}

class Course_Teacher {
  +id: bigint
  +course_id: bigint
  +user_id: bigint
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +AssignTeacher()
  +RemoveTeacher()
  +GetTeacherByCourse()
  +GetCoursesByTeacher()
  +AutoID()
}

class Subject_Teacher {
  +id: bigint
  +subject_id: bigint
  +user_id: bigint
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +AssignTeacher()
  +RemoveTeacher()
  +GetTeacherBySubject()
  +GetSubjectByTeacher()
  +AutoID()
}

class Course_Student {
  +id: bigint
  +course_id: bigint
  +student_id: bigint
  +status: enum (pending, approved, rejected, withdrawal_pending)
  +created_at: timestamp
  +updated_at: timestamp
  --
  +FillGetData()
  +RequestEnrollment()
  +ApproveEnrollment()
  +RejectEnrollment()
  +RequestWithdrawal()
  +ApproveWithdrawal()
  +RejectWithdrawal()
  +SearchEnrollment()
  +GetByStudent()
  +GetByCourse()
  +AutoID()
}

User "1" -- "0..1" Student : has profile
Course "1" -- "1..*" Subject : has
Course "1" -- "0..*" Course_Teacher
User "1" -- "0..*" Course_Teacher : teaches
Subject "1" -- "0..*" Subject_Teacher
User "1" -- "0..*" Subject_Teacher : teaches
Course "1" -- "0..*" Course_Student
Student "1" -- "0..*" Course_Student

note bottom of Course_Student
  Approve/Reject implemented in
  EnrollmentService + StaffEnrollmentController
end note

@enduml
